  * Fix theoretical stack buffer overflow in w_dependency() on libdpkg, not
    currently applicable. Reported by Pedro Ribeiro <pedrib@gmail.com>.
  * Add ppc64el support to cputable. Closes: #718945
    Thanks to Jeff Bailey <jeffbailey@google.com>.
  * Use dpkg-gencontrol -c argument as a fallback lock file in case
    debian/control does not exist. Closes: #667008

  [ Updated programs translations ]
  * Vietnamese (Trần Ngọc Quân).

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 15:06:29 +0200

dpkg (1.17.1) unstable; urgency=low

  * Man pages cleanup:
    - Make explicit that dpkg-shlibdeps -e can be used multiple times.
    - Improve documentation on how to update the available database before
      setting package selections. Suggested by Klaus Ita <koki.eml@gmail.com>.
  * Add manpages-it Replaces to dpkg due to new translated man pages.
    Reported by Alessio Gaeta <alga777@gmail.com>. Closes: #717983
  * Reword libdpkg-perl description and only list public modules.
  * Remove space before value in dpkg-parsechangelog -S option on pkg-info.mk.
    Closes: #718014
  * Make the build system install start-stop-daemon directly under /sbin,
    instead of moving it around in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 14:44:50 +0200

dpkg (1.17.0) unstable; urgency=low

  [ Guillem Jover ]
  * Switch update-alternatives back to a fatal error on out of range priority
    on --install.
  * Document dpkg-deb --debug in --help output.
  * Bump Standards-Version to 3.9.4 (no changes needed).
  * Use the new canonical dpkg git Vcs URLs.
  * Remove ancient version from zlibg1-dev Build-Depends.
  * Add compression development packages to libdpkg-dev Depends.
  * Man pages cleanup:
    - Disable justification and hyphenation in SEE ALSO sections.
    - Remove unneeded double quotes in .SH headings.
    - Do not use “header” when “format” or “field” is meant.