@@ -711,6 +711,11 @@ version of the currently running \fBdpkg\fP instance.
 Defined by \fBdpkg\fP on the maintainer script environment to the
 (non-arch-qualified) package name being handled.
 .TP
+.B DPKG_MAINTSCRIPT_PACKAGE_REFCOUNT
+Defined by \fBdpkg\fP on the maintainer script environment to the
+package reference count, i.e. the number of package instances with
+a state greater than \fBnot\-installed\fP. Since dpkg 1.17.2.
+.TP
 .B DPKG_MAINTSCRIPT_ARCH
 Defined by \fBdpkg\fP on the maintainer script environment to the
 architecture the package got built for.
