@@ -25,6 +25,8 @@ dpkg (1.17.2) UNRELEASED; urgency=low
     Thanks to Jeff Bailey <jeffbailey@google.com>.
   * Use dpkg-gencontrol -c argument as a fallback lock file in case
     debian/control does not exist. Closes: #667008
+  * Pass the package reference count (i.e. number of present instances) to
+    maintainer scripts via the new variable DPKG_MAINTSCRIPT_PACKAGE_REFCOUNT.
 
   [ Updated programs translations ]
   * Vietnamese (Trần Ngọc Quân).
